postgresql-9.6 (9.6~beta1-5) UNRELEASED; urgency=medium

  * Run regression tests in architecture-dependant builds only.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 19 May 2016 15:08:36 +0200

postgresql-9.6 (9.6~beta1-4) experimental; urgency=medium

  * Split the build process into indep and arch parts. (The manpages are still
    built in both because they are distributed over the server and doc
    packages.)

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 18 May 2016 14:01:39 +0200

postgresql-9.6 (9.6~beta1-3) experimental; urgency=medium

  * Use dh-exec to not install the sepgsql files on non-linux.
  * B-D on libsystemd-dev on linux only.

 -- Christoph Berg <christoph.berg@credativ.de>  Tue, 17 May 2016 17:51:02 +0200

postgresql-9.6 (9.6~beta1-2) experimental; urgency=medium

  * Merge back separate contrib copyright file into debian/copyright.

 -- Christoph Berg <myon@debian.org>  Fri, 13 May 2016 16:35:11 +0200

postgresql-9.6 (9.6~beta1-1) experimental; urgency=low

  * New major upstream version 9.6; packaging based on postgresql-9.5.

    Major enhancements in PostgreSQL 9.6 include:
    + Parallel sequential scans, joins and aggregates
    + Elimination of repetitive scanning of old data by autovacuum
    + Synchronous replication now allows multiple standby servers for
      increased reliability
    + Full-text search for phrases
    + Support for remote joins, sorts, and updates in postgres_fdw
    + Substantial performance improvements, especially in the area of
      improving scalability on many-CPU servers

  * Record PostgreSQL catalog version number in .deb control file and a file
    inside the .deb. Hook into preinst/postinst logic in postgresql-common 171
    to handle catalog version bumps.

 -- Christoph Berg <christoph.berg@credativ.de>  Tue, 10 May 2016 10:20:52 +0200