@@ -1,6 +1,8 @@
 postgresql-9.6 (9.6~beta1-5) UNRELEASED; urgency=medium
 
   * Run regression tests in architecture-dependant builds only.
+  * Remove conditional multi-arch compilation, all supported dists are
+    multi-arched now.
 
  -- Christoph Berg <christoph.berg@credativ.de>  Thu, 19 May 2016 15:08:36 +0200
 
